--- a/resources/sass/object/component/c-auth.scss
+++ b/resources/sass/object/component/c-auth.scss
@@ -121,8 +121,27 @@
       margin: 0;
       width: 100px;
     }
+    &:before {
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-top: 6px solid $theme_dark_gray;
+      color: $theme_dark_gray;
+      content: '';
+      height: 0;
+      position: absolute;
+      padding: 0;
+      pointer-events: none;
+      right: 35px;
+      top: 30px;
+      width: 0;
+      pointer-events: none;
+      @include mq() {
+        right: 20px;
+        top: 25px;
+      }
+    }
   }
-  &__select-box select {
+  &__select {
     appearance: none;
     background: $theme_gray_background;
     border: none;
@@ -138,27 +157,8 @@
       font-size: $font_sp-m;
       width: 100px;
     }
-  }
-  &__select-box select::-ms-expand {
-    display: none;
-  }
-  &__select-box:before {
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid $theme_dark_gray;
-    color: $theme_dark_gray;
-    content: '';
-    height: 0;
-    position: absolute;
-    padding: 0;
-    pointer-events: none;
-    right: 35px;
-    top: 30px;
-    width: 0;
-    pointer-events: none;
-    @include mq() {
-      right: 20px;
-      top: 25px;
+    &::-ms-expand {
+      display: none;
     }
   }
   &__ask {
