--- a/resources/sass/object/component/c-auth.scss
+++ b/resources/sass/object/component/c-auth.scss
@@ -55,7 +55,7 @@
     width: 400px;
     -webkit-border-radius: 0px;
     @include mq() {
-      font-size: $font_sp-m;
+      font-size: $font_s;
       padding: 18px 0 $space_s $space_m;
       width: 100%;
     }
